--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.roman.tihai.droidcafe.MainActivity">
+
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_order"
+        android:title="Order"
+        android:orderInCategory="10"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_shopping_cart"/>
+
+    <item
+        android:id="@+id/action_status"
+        android:title="Status"
+        app:showAsAction="always"
+        android:orderInCategory="20"
+        android:icon="@drawable/ic_action_status"/>
+
+    <item
+        android:id="@+id/action_favorites"
+        android:title="Favorites"
+        app:showAsAction="always"
+        android:orderInCategory="30"
+        android:icon="@drawable/ic_action_favorite"/>
+
+
+    <item
+        android:id="@+id/action_contact"
+        android:title="Contact"
+        app:showAsAction="never"
+        android:orderInCategory="50"/>
+
 </menu>
